// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSupport add a new field to column to the pages 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [
              Object {
                "spritemap": "icons.svg",
                "type": "text",
              },
            ],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`FormSupport add a new row to the pages and reorder 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "type": "newRow",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`FormSupport should add a new fields to column void 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [
              Object {
                "spritemap": "icons.svg",
                "type": "text",
              },
            ],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`FormSupport should get a column from pages 1`] = `
Object {
  "fields": Array [
    Object {
      "fieldName": "select",
      "label": "Select Field",
      "options": Array [
        Object {
          "label": "Option 1",
          "value": "option1",
        },
        Object {
          "label": "Option 2",
          "value": "option2",
        },
      ],
      "required": true,
      "settingsContext": Object {
        "pages": Array [],
      },
      "type": "select",
    },
  ],
  "size": 6,
}
`;

exports[`FormSupport should get a row from pages 1`] = `
Object {
  "columns": Array [
    Object {
      "fields": Array [
        Object {
          "fieldName": "text1",
          "label": "Text Field 1",
          "required": true,
          "settingsContext": Object {
            "pages": Array [],
          },
          "type": "text",
        },
        Object {
          "fieldName": "text2",
          "label": "Text Field 2",
          "required": true,
          "settingsContext": Object {
            "pages": Array [],
          },
          "type": "text",
        },
      ],
      "size": 4,
    },
    Object {
      "fields": Array [
        Object {
          "fieldName": "select",
          "label": "Select Field",
          "options": Array [
            Object {
              "label": "Option 1",
              "value": "option1",
            },
            Object {
              "label": "Option 2",
              "value": "option2",
            },
          ],
          "required": true,
          "settingsContext": Object {
            "pages": Array [],
          },
          "type": "select",
        },
      ],
      "size": 6,
    },
    Object {
      "fields": Array [],
      "size": 2,
    },
  ],
}
`;

exports[`FormSupport should get a specific field through the pages 1`] = `
Object {
  "fieldName": "radio",
  "label": "Radio Field",
  "options": Array [
    Object {
      "label": "Option 1",
      "value": "option1",
    },
    Object {
      "label": "Option 2",
      "value": "option2",
    },
  ],
  "settingsContext": Object {
    "pages": Array [
      Object {
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "fields": Array [
                  Object {
                    "fieldName": "label",
                    "localizable": true,
                    "settingsContext": Object {
                      "pages": Array [
                        Object {
                          "rows": Array [
                            Object {
                              "columns": Array [],
                            },
                          ],
                        },
                      ],
                    },
                  },
                  Object {
                    "fieldName": "name",
                  },
                  Object {
                    "fieldName": "required",
                  },
                  Object {
                    "fieldName": "type",
                  },
                ],
                "size": 12,
              },
            ],
          },
        ],
      },
    ],
  },
  "type": "radio",
}
`;

exports[`FormSupport should remove a column from pages and reorder 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`FormSupport should remove a fields to column from pages 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`FormSupport should remove a row from pages and reorder 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`FormSupport should update a field 1`] = `
Array [
  Object {
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;
